--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 ollama-rs = "0.2.3"
 pdf-extract = "0.8.0"
+serde_json = "1.0.139"
 text-splitter = { version = "0.20.1", features = ["tokenizers"] }
 tokenizers = { version = "0.21.0", features = ["http"] }
 tokio = { version = "1.43.0", features = ["full"] }
